Sort posts by date

--- a/front-template.html
+++ b/front-template.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>$TITLE$</title>
 </head>
 <body>
-$CONTENT$
+  <div class="content">
+    $CONTENT$
+  </div>
 </body>
 </html>
