--- a/front-template.html
+++ b/front-template.html
@@ -6,6 +6,14 @@
     <title>$TITLE$</title>
 </head>
 <body>
+  <div class="header">
+    <div class="header-title">
+      $TITLE$
+    </div>
+    <div class="header-tagline">
+      $TAGLINE$
+    </div>
+  </div>
   <div class="content">
     $CONTENT$
   </div>
