Begin support for pages

--- a/header-template.html
+++ b/header-template.html
@@ -1,6 +1,7 @@
-<!-- Template for header of every page. Client must provide:
+<!-- Template for site header. Client must provide:
 TITLE: Title of site.
-TAGLINE: Tagline. -->
+TAGLINE: Tagline.
+MENU: Navigation bar. -->
 
 <div class="header">
   <div class="header-title">
@@ -8,5 +9,8 @@ TAGLINE: Tagline. -->
   </div>
   <div class="header-tagline">
     $TAGLINE$
+  </div>
+  <div class="header-menu">
+    $MENU$
   </div>
 </div>
