Add pages and navigation bar

--- a/main-template.html
+++ b/main-template.html
@@ -1,4 +1,4 @@
-<!-- Template for front page. Client must provide: 
+<!-- Template for every page. Client must provide: 
 TITLE - Title of site
 HEADER - Header bar (will be generated from header-template.html)
 CONTENT - Main content (will be generated from post-template.html) -->
