--- a/main-template.html
+++ b/main-template.html
@@ -15,5 +15,6 @@ CONTENT - Main content (will be generated from post-template.html) -->
   <div class="content">
     $CONTENT$
   </div>
+  $FOOTER$
 </body>
 </html>
