Refactor meta attribs to be loaded from meta.md

--- a/main-template.html
+++ b/main-template.html
@@ -2,7 +2,8 @@
 SITE_URL - URL of site (with trailing slash)
 TITLE - Title of site
 HEADER - Header bar (will be generated from header-template.html)
-CONTENT - Main content (will be generated from post-template.html) -->
+CONTENT - Main content (will be generated from post-template.html)
+FOOTER - Footer bar (will be generated from footer-template.html) -->
 
 <!DOCTYPE html>
 <html>
