--- a/proj1.html
+++ b/proj1.html
@@ -27,7 +27,7 @@ MENU: Navigation bar. -->
     This is the tagline.
   </div>
   <div class="header-menu">
-    <nav class="nav-bar"><ul><li><a href="./index.html">Home</a></li><li><a href="#">Code</a><ul><li><a href="./proj2.html">Project Omega</a></li><li><a href="./proj1.html">Project Beta</a></li></ul></li><li><a href="#">Music</a><ul><li><a href="./proj1.html">Project Treble</a></li></ul></li></ul></nav>
+    <nav class="nav-bar"><ul><li><a href="./index.html">Home</a></li><li><a href="#">Code</a><ul><li><a href="./proj1.html">Project Beta</a></li><li><a href="./proj2.html">Project Omega</a></li></ul></li><li><a href="#">Music</a><ul><li><a href="./proj1.html">Project Treble</a></li></ul></li></ul></nav>
   </div>
 </div>
 
@@ -39,11 +39,14 @@ CONTENT: HTML (not Markdown) content of page. -->
 <article class="page">
   <header class="page-header">
     <div class="page-title">
-      Project Treble
+      Project Beta
     </div>
   </header>
   <section class="page-content">
-    <p>This is a page. EIEIO</p>
+    <p>This is a page. Aaah</p>
+<pre><code>print("Hello")
+let x = 3 + 3 * 6
+</code></pre>
   </section>
 </article>
 
